# tuprfr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  dev  flake.nix  package-lock.json  package.json  playwright.config.ts  seed.sql  tsconfig.json
docs/adr/: 0001-runtime-submission-mode.md  0002-session-store.md  0003-hexagonal-architecture.md  0004-database-technology.md  0005-e2e-test-database-and-server-lifecycle.md  0006-configuration-file-and-env-var-convention.md  0007-css-approach.md
migrations/: 0001_initial.down.sql  0001_initial.up.sql
src/: config.rs  lib.rs  main.rs
src/adapters/inbound/http/: error.rs  routes.rs
src/adapters/outbound/db/: mod.rs  question_repo.rs
src/application/use_cases/: cast_vote.rs  get_next_question.rs  mod.rs  skip_question.rs  submit_question.rs
src/domain/: model.rs
src/domain/ports/: mod.rs  question_repository.rs
templates/: base.html  pool_exhaustion.html  question.html  question_new.html  results.html  submission_error.html  submission_success.html
tests/e2e/: config.ts  fixtures.ts  game-loop.spec.ts  global-setup.ts  helpers.ts  pool-exhaustion.spec.ts  screenshot.spec.ts  submit.spec.ts
