[package]
name = "tuprfr"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
config = "0.14"
askama_axum = "0.4"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tower-sessions = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Pins below keep the dep graph compatible with Rust 1.81 (edition 2024 requires >= 1.85).
# To find further offenders on the prod machine after `cargo fetch`:
#   grep -rl 'edition = "2024"' ~/.cargo/registry/src/ | sed 's|.*/\([^/]*\)/Cargo.toml|\1|'
idna_adapter = ">=1, <1.2"
home = ">=0.5, <0.5.12"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
